# Hazel

./: .editorconfig  .gitignore  .gitmodules  .lvimrc  CMakeLists.txt  Dependencies.lua  GenerateProjects.bat  GenerateProjects.sh  Hazel.sln  LICENSE  README.md  This is just trying  WindowsWindow.cpp  imgui.ini  premake5.lua  premake_customizations.lua
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  issue--blank-template.md  issue--bug-report.md  issue--feature-request.md  other-issues--blank-template.md
.github/PULL_REQUEST_TEMPLATE/: pull-request--blank-template.md  pull-request--implemented-issue.md  pull-request--new-issue.md
.github/workflow/: linux-workflow.yml
.github/workflows/: linux-workflow.yml  unittest.yml  windows-workflow.yml
Hazel/: CMakeLists.txt  Hazel.vcxproj  Hazel.vcxproj.filters  premake5.lua
Hazel-Editor/: imgui.ini
Hazel-Editor/src/: EditorLayer.cpp  EditorLayer.h  HazelEditorApp.cpp
Hazel-Examples/: HazelProfile-Shutdown.json  HazelProfile-Startup.json  imgui.ini  premake5.lua
Hazel-Examples/src/: ExampleApp.cpp  ExampleLayer.cpp  SandboxApp.cpp
Hazel-ScriptCore/: CMakeLists.txt  clean.sh  compileDebug.sh  compileRelease.sh  premake5.lua
Hazel-ScriptCore/Source/: Camera.cs  Main.cs  Player.cs
Hazel-ScriptCore/Source/Hazel/: Input.cs  InternalCalls.cs  KeyCode.cs  Vector2.cs  Vector3.cs  Vector4.cs
Hazel/src/: Hazel.h  hzpch.cpp  hzpch.h
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Hazel/src/Hazel/Asset/: Asset.cpp  Asset.h  AssetImporter.cpp  AssetImporter.h  AssetManager.h  AssetManagerBase.h  AssetMetadata.h  EditorAssetManager.cpp  EditorAssetManager.h  RuntimeAssetManager.cpp  RuntimeAssetManager.h  SceneImporter.cpp  SceneImporter.h  TextureImporter.cpp  TextureImporter.h
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Assert.h  AudioManager.h  AudioManger.cpp  AudioProcess.cpp  AudioProcess.h  Base.h  Buffer.h  Core.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  GamepadCodes.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  MouseCodes.h  PlatformDetection.h  Process.cpp  Process.h  ProcessManager.cpp  ProcessManager.h  Random.cpp  Random.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h  angles.h
Hazel/src/Hazel/Core/Math/: degrees.cpp  degrees.h  radians.cpp  radians.h
Hazel/src/Hazel/Debug/: DebugBreak.h  Instrumentor.cpp  Instrumentor.h
Hazel/src/Hazel/Events/: ApplicationEvent.h  Event.cpp  Event.h  GamepadEvent.h  KeyEvent.h  MouseEvent.h
Hazel/src/Hazel/ImGui/: ImGuiBuild.cpp  ImGuiConsole.cpp  ImGuiConsole.h  ImGuiConsoleSink.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLog.h  ImGuiLogSink.h
Hazel/src/Hazel/Math/: Math.cpp  Math.h
Hazel/src/Hazel/Physics/: Physics2D.h
Hazel/src/Hazel/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Hazel/src/Hazel/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  MSDFData.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Hazel/src/Hazel/Scene/: Components.h  Entity.cpp  Entity.h  NativeScript.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Hazel/src/Hazel/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Hazel/src/Hazel/UI/: UI.h
Hazel/src/Hazel/Utility/: Random.h
Hazel/src/Hazel/Utils/: PlatformUtils.h  Random.h
Hazel/src/Platform/Linux/: LinuxDialogWindow.cpp  LinuxDialogWindow.h  LinuxInput.cpp  LinuxPlatformUtils.cpp  LinuxWindow.cpp  LinuxWindow.h
Hazel/src/Platform/Linux-Xlib/: XlibInput.cpp  XlibWindow.cpp  XlibWindow.h
Hazel/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLError.cpp  OpenGLError.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Hazel/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Hazel/test/: HazelTest.cpp  LogTest.cpp
Hazelnut/: imgui.ini  premake5.lua
Hazelnut/SandboxProject/: Sandbox.hproj
Hazelnut/assets/scenes/: 3DExample.hazel  ColoredCube.hazel  Example.hazel  Physics2D.hazel  PinkCube.hazel  TextureExample.hazel
Hazelnut/assets/shaders/: FlatColor.glsl  Renderer2D_Circle.glsl  Renderer2D_Line.glsl  (+3 more)
Hazelnut/src/: EditorLayer.cpp  EditorLayer.h  HazelnutApp.cpp
Sandbox/: CMakeLists.txt  HazelProfile-Runtime.json  HazelProfile-Shutdown.json  HazelProfile-Startup.json  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini  premake5.lua
Sandbox/assets/shaders/: Line.glsl  Texture.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  Sandbox3D.cpp  Sandbox3D.h  SandboxApp.cpp
SetupGitActions/: Setup.bat  Setup.py  SetupPremake.py  SetupPython.py  SetupVulkan.py  Utils.py
linuxScripts/: UbuntuSetup.sh  action.sh  clean.sh  compile.sh
scripts/: CheckPython.py  CompileSetup.bat  Get_Or_Update_Submodules.bat  Linux-GenProjects.sh  Lnx-GenProjects.sh  Premake.py  Setup.py  SetupPremake.py  SetupPython.py  SetupVulkan.cs  SetupVulkan.py  Utils.py  Vulkan.py  Win-BuildPremake.bat  Win-CleanBuild.bat  Win-GenPremake.bat  Win-GenProjects.bat  Win-GetSubmodules.bat
(+27 files in other folders)
